Updated chart look

--- a/css/btnAndSwitch.css
+++ b/css/btnAndSwitch.css
@@ -19,7 +19,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: palevioletred;
+    background-color: rgba(216, 112, 147, 0.603);
     transition: .4s;
 }
 
