--- a/css/home.css
+++ b/css/home.css
@@ -41,13 +41,11 @@
     width: 100%
 }
 
-.coinLogo {
-    width: 20%;
-    height: 20%;
-    margin: 5px;
-    box-shadow: 2px 2px 4px gray, 2px 2px 8px black;
+.card-img {
+    width: 50px;
+    height: 50px;
+    margin: 3px;
 }
-
 @media only screen and (max-width: 1175px) {
 
     h2 {
