--- a/css/general.css
+++ b/css/general.css
@@ -1,5 +1,5 @@
 h2 {
-    color: rgb(11, 11, 11);
+    color: rgb(248, 229, 229);
     font-variant: small-caps;
     font-size: 80px;
     text-align: center;
@@ -17,12 +17,12 @@ h3 {
 
 .parallaxScrolling {
     border-bottom: 10px ridge gold;
-    max-height: 180px;
+    max-height: 220px;
     margin-top: 56px;
     background-image: url("../assets/img/parallexBg.webp");
+    background-size: contain;
     width: 100%;
     background-attachment: fixed;
-    background-size: contain;
     background-repeat: no-repeat;
 }
 
@@ -40,16 +40,15 @@ h3 {
 #coin-limit-toast {
     z-index: 1050;
     width: 400px;
-    height: fit-content;
+    height: 100px;
 }
 
 #coin-limit-toast .alert {
-    margin-bottom: -10px;
     font-size: 23px;
 }
 
 .custom-toast {
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 0 12px rgba(0, 0, 0, 0.9),  0 0 22px rgba(0, 0, 0, 0.5),  0 0 5px rgba(0, 0, 0, 0.2);
 }
 
 footer {
