--- a/css/pages.css
+++ b/css/pages.css
@@ -5,7 +5,8 @@
     font-weight: bold;
     text-shadow: 12px 9px 20px rgb(255, 204, 0), 2px 3px 9px red;
 }
-
+.about-page>li,
+.about-page>ul,
 .project-page>p,
 .project-page>li,
 .project-page>ul {
