--- a/css/video.css
+++ b/css/video.css
@@ -3,6 +3,7 @@
     position: relative;
     width: 100%;
     height: 100vh;
+    
 }
 
 /* Video Styling */
@@ -14,7 +15,8 @@
     min-height: 100%;
     transform: translate(-50%, -50%);
     z-index: -1;
-    object-fit: cover; 
+    object-fit: cover;
+    filter: brightness(1.1);
 }
 
 /* Styling */
