--- a/css/general.css
+++ b/css/general.css
@@ -48,7 +48,7 @@ h3 {
 }
 
 .custom-toast {
-    box-shadow: 0 0 12px rgba(0, 0, 0, 0.9),  0 0 22px rgba(0, 0, 0, 0.5),  0 0 5px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 0 12px rgba(0, 0, 0, 0.9),  0 0 22px rgba(0, 0, 0, 0.5);
 }
 
 footer {
