--- a/css/general.css
+++ b/css/general.css
@@ -14,7 +14,6 @@ h3 {
     text-shadow: 2px 2px 8px goldenrod, 3px 3px 10px rgb(248, 15, 15), 7px -3px 12px rgb(5, 254, 5), 10px 4px 14px rgb(251, 2, 197), -10px -10px 16px rgb(2, 135, 251), 5px 10px 18px rgb(2, 56, 251), 19px -19px 20px rgb(251, 2, 126);
 }
 
-
 .parallaxScrolling {
     border-bottom: 10px ridge gold;
     max-height: 220px;
@@ -48,7 +47,7 @@ h3 {
 }
 
 .custom-toast {
-    box-shadow: 0 0 12px rgba(0, 0, 0, 0.9),  0 0 22px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 0 12px rgba(0, 0, 0, 0.9),  0 0 22px rgba(0, 0, 0, 0.5)
 }
 
 footer {
