--- a/css/pages.css
+++ b/css/pages.css
@@ -1,10 +1,21 @@
-
-.about-page>p {
-    font-size: 40px;
-    text-align: center;
-    font-weight: bold;
-    text-shadow: 12px 9px 20px rgb(255, 204, 0), 2px 3px 9px red;
+.aboutImg {
+    background: right;
+    text-align: left;
+    background-image: url(../assets/img/aboutBackground2.png);
+    background-size: 700px;
+    background-repeat: no-repeat;
 }
+.about-page {
+    padding-right: 45%;
+}
+
+h6 {
+    font-size: 25px;
+    text-align: left;
+    font-weight: bold;
+    text-shadow: 1px 1px 1px gold, 2px 3px 4px goldenrod;
+}
+
 .about-page>li,
 .about-page>ul,
 .project-page>p,
@@ -65,9 +76,10 @@
 
 @media only screen and (max-width: 770px) {
     h3, p,
-    .project-page>a,
-    .project-page>li,
+    .about-page>li,
+    .about-page>ul,
     .project-page>p,
+    .project-page>li,
     .project-page>ul  {
         font-size: 20px;
         font-weight: bold;
@@ -94,9 +106,10 @@
 
 @media only screen and (max-width: 470px) {
     h3, p,
-    .project-page>a,
-    .project-page>li,
+    .about-page>li,
+    .about-page>ul,
     .project-page>p,
+    .project-page>li,
     .project-page>ul {
         font-size: 15px;
         font-weight: bold;
